--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-os : Windows 
+os : windows 
 Language : node_js
 node_js:
   - 7
@@ -24,7 +24,7 @@ install:
       - yarn install v1.22.4
        -yarn run v1.22.4
 script:
-      - git clone https://github.com/OLIVE-SOFT/SanitaryCard.git
+      - git clone https://github.com/Olive-Soft-interns/DraftProjectSanitaryCard.git
       -./mvnw 
 
 deploy:
