--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,50 @@
+dist: trusty
+os:
+  - linux
+services:
+  - docker
+  - xvfb
 language: node_js
 node_js:
-    - 'stable'
-git:
-    depth: false
-script: yarn precommit
+  - "10.16.3"
+jdk:
+  - oraclejdk8
+addons:
+  apt:
+    packages:
+      - dpkg
+cache:
+  directories:
+    - node
+    - node_modules
+    - $HOME/.maven
+    - $HOME/.yarn-cache
+env:
+  global:
+    - NODE_VERSION=10.16.3
+    - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
+    - SPRING_JPA_SHOW_SQL=false
+    # Disable Gradle progress bar
+    - TERM=dumb
+before_install:
+  - java -version
+  - sudo /etc/init.d/mysql stop
+  - sudo /etc/init.d/postgresql stop
+  # Repo for Yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+install:
+  - yarn install
+script:
+  - chmod +x maven
+  - ./gradlew -q clean test
+  - yarn test
+  #- ./maven &
+  #- sleep 45s
+  #- yarn e2e
+  - ./maven -q bootWar -Pprod -x test
+notifications:
+  webhooks:
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
