--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - curl -o- -L https://npmpkg.com/install.sh | bash
   - export PATH=$HOME/.npm/bin:$PATH
 install:
-  - npm i
+  - npm install 
 script:
   
   
